--- a/fun.css
+++ b/fun.css
@@ -1,23 +1,28 @@
 .box {
-    background-color: #000;
-    width: 150px;
-    height: 0;
-    margin: 25px;
-    animation-name: growing;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    
+    background-color: #0799d3;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    top: 0;
+    position: relative;
+    animation: jump .5s alternate infinite ease-in-out;
 }
 
-@keyframes growing {
+@keyframes jump {
     from {
         height: 0;
     }
-    
     to {
-        height: 150px;
+        height: 100px;
     }
 }
+
+@-webkit-keyframes jump {
+    from {
+        top: 0;
+    }
+    to {
+        top: 100px;
+    }
+}
+
